# auto-chess-backend

./: .gitignore  AGENTS.md  README.md  config.py  deploy.sh  main.py  motor_controller.py  pyproject.toml  setup-pigpio.sh  setup_env.sh  test_mock.sh
.github/workflows/: ci.yml  release.yml
analysis/: compare_drive_systems.py
docs/: ACCELERATION.md  AI_DIFFICULTY_SELECTION.md  LED_MODE_SELECTION.md  PIGPIO_IMPLEMENTATION.md
src/: board_navigation.py  capture_management.py  config.py  demo_patterns.py  knight_pathfinding.py  main.py  motor_controller.py  piece_movement.py  reed_switch_controller.py
src/ai/: __init__.py  chess_ai.py
src/chess_game/: __init__.py  game.py  piece.py  player.py  square.py
src/led/: __init__.py  ws2812b_controller.py
src/motor/: __init__.py  electromagnet.py  motor_controller.py  pigpio_wave.py  stepper_motor.py
tests/: __init__.py  conftest.py  test_board_navigation.py  test_capture_handling.py  test_chess_ai.py  test_chess_game.py  test_cli_integration.py  test_difficulty_selection.py  test_extended_board.py  test_game_integration.py  test_homing_safety.py  test_knight_pathfinding.py  test_led_controller.py  test_path_verification.py  test_reed_switches.py  test_utils.py
tests/fixtures/: __init__.py  motor_fixtures.py  movement_capture.py
tests/visualization/: __init__.py  board_drawing.py  path_plotting.py  speed_plotting.py
tests/visualization/standard_plots/: __init__.py  chess_plots.py  led_plots.py  movement_plots.py  reed_switch_plots.py  speed_plots.py
