[project]
name = "auto-chess-backend"
version = "0.1.0"
description = "XY carriage stepper motor controller for automated chess board"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "gpiozero>=2.0",
    "click>=8.1.0",
    "chess>=1.11.1",
    "pigpio>=1.78",
]

[project.scripts]
chess = "main:cli"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/motor", "src/chess_game", "src/led"]
include = ["src/*.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E4",   # pycodestyle errors (part 1)
    "E7",   # pycodestyle errors (part 2)
    "E9",   # pycodestyle errors (part 3)
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
exclude = ["analysis/"]
# Set src/ as the module search path
mypy_path = "src"
# Prevent namespace package issues with src-layout
namespace_packages = false

[[tool.mypy.overrides]]
module = "gpiozero"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.test_utils"
disable_error_code = ["method-assign"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-env>=1.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
env = [
    "MOTOR_DEBUG=0"  # Disable debug prints during testing for speed
]
filterwarnings = [
    "ignore::gpiozero.exc.PinFactoryFallback"
]
